--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <section id="datos">
             <h2>Datos Generales</h2>
-            <h3>Nombre: Leydi Jazmin Abarca Laura</h3>
-            <h3>Edad: 20</h3>
+            <h3>Nombre: Leydi Jasmin Abarca Laura</h3>
+            <h3>Edad: 19</h3>
             <h3>Carrera: Ingeniería Industrial</h3>
             <img src="imagen/foto-leydi.jpg" class="imagen" alt="Foto de Leydi Jazmin Abarca Laura">
         </section>
@@ -45,14 +45,18 @@
 
         <section id="profesor">
             <h2>Perfil de mi Docente</h2>
-            <a href="https://www.linkedin.com/in/ecuadrosv" target="_blank">Ernesto Cuadros Vargas</a>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/ecuadrosv" target="_blank">Ernesto Cuadros Vargas</a></li>
+                <li><a href="https://www.linkedin.com/in/veronica-jes%C3%BAs-pilco-mamani-81a85a255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Veronica Jesus Pilco Mamani</a></li>
+                <li><a href="https://www.linkedin.com/in/alejandro-zegarra-balboa-60879a102?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Alejandro Zegarra Balboa</a></li>
+            </ul>
         </section>
 
         <section id="compañeros">
             <h2>Compañeros de Clase</h2>
             <ul>
                 <li>Deysi Roxana Yaule Flores</li>
-                <li>Daniela Elizabeth Flores Turpo</li>
+                <li><a href="https://elizapov.github.io/Daniela-Elizabeth/" target="_blank">Daniela Elizabeth Flores Turpo</a></li>
             </ul>
         </section>
 
