--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <section id="decripcion">
             <h2>Biografía</h2>
             <p>Soy estudiante de la <a href="https://ucsp.edu.pe/" target="_blank">Universidad Católica San Pablo</a> y estudio la carrera de <a href="https://ucsp.edu.pe/carreras/ingenieria-industrial/" target="_blank">Ingeniería Industrial</a>. 
-                Me considero una persona responsable, perseverante y con muchas ganas de aprender. Me gusta ver documentales o series con contenido interesante, así como aprender cosas prácticas a través de videos o tutoriales. A lo largo de mi formación, 
-                he desarrollado habilidades como el trabajo en equipo, la comunicación efectiva y la organización. Me interesa seguir desarrollándome tanto en lo académico como en lo personal, buscando siempre mejorar y crecer como persona.</p>
+                Me considero una persona responsable, perseverante y con muchas ganas de aprender. Me gusta ver documentales o series con contenido interesante, así como aprender cosas prácticas a través de videos o tutoriales.. Me interesa seguir desarrollándome tanto en lo académico como en lo personal, buscando siempre mejorar y crecer como persona.</p>
         </section>
 
         <section id="cursos">
@@ -55,8 +54,12 @@
         <section id="compañeros">
             <h2>Compañeros de Clase</h2>
             <ul>
-                <li>Deysi Roxana Yaule Flores</li>
+                <li><a href="https://angelicacornejod.github.io/AngelicaCorrnejo/" target="_blank">Angelica Mariana Cornejo Davila</a></li>
                 <li><a href="https://elizapov.github.io/Daniela-Elizabeth/" target="_blank">Daniela Elizabeth Flores Turpo</a></li>
+                <li><a href="https://greciameza.github.io/Grecia-Meza-page/" target="_blank">Grecia Camila Meza Caballero</a></li>
+                <li><a href="https://vaniabusta10.github.io/" target="_blank">Vania Busta</a></li>
+                <li><a href="https://lindsay051206.github.io/Lindsay-Alanna-Perochena-Obreg-n/" target="_blank">Lindsay Alanna Perochena Obregon</a></li>
+                <li><a href="https://sam061006.github.io/Samantha-M-a-Johnson-N-ez/" target="_blank">Samantha Mia Johnson Nuñez</a></li>
             </ul>
         </section>
 
